# toml-formatter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yaml  linting.yaml  tests.yaml
docs/: conf.py
tests/smoke/: test_main.py
tests/unit/: test_toml_formatter.py
toml_formatter/: __init__.py  __main__.py  argparse_wrapper.py  aux_types.py  commands_functions.py  config_parser.py  formatter.py  formatter_options.py  general_utils.py  logs.py  toml_formatter.py
